---------------------------------------------------------------------------------------------------
Version: 5.1.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 5.1.1
Date: 2020-12-24
  Bugfixes:
    - Fixed loading error with IR2 and SmartTrain stop not unlocking via research
---------------------------------------------------------------------------------------------------
Version: 5.1.0
Date: 2020-11-23
  Changes:
    - Updated for Factorio 1.1
---------------------------------------------------------------------------------------------------
Version: 5.0.4
Date: 2020-08-25
  Changes:
    - added command /st_toggle_flying_text to, well, toggle flying text.
  Bugfixes:
    - Fixed error when entering a vehicle in editor mode
---------------------------------------------------------------------------------------------------
Version: 5.0.3
Date: 28. 07. 2020
  Bugfixes:
    - Fixed error when no item/fluid is selected in a condition
---------------------------------------------------------------------------------------------------
Version: 5.0.2
Date: 24. 05. 2020
  Changes:
    - Use builtin events where possible
---------------------------------------------------------------------------------------------------
Version: 5.0.1
Date: 08. 02. 2020
  Bugfixes:
    - Fixed startup warnings
---------------------------------------------------------------------------------------------------
Version: 5.0.0
Date: 26. 01. 2020
  Changes:
    - Updated for Factorio 0.18
---------------------------------------------------------------------------------------------------
Version: 4.0.9
Date: 04. 10. 2019
  Bugfixes:
    - Fixed smart train stop not being unlocked with Industrial Revolution
---------------------------------------------------------------------------------------------------
Version: 4.0.8
Date: 18. 09. 2019
  Bugfixes: